kubernetes/demo/Harbor/usermangage-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermangage
  labels:
    app: usermangage
spec:
  ports:
    - port: 9193
      targetPort: 9193
      name: "http"
  selector:
    run: usermangage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: usermangage
  name: usermangage
spec:
  replicas: 1
  selector:
    matchLabels:
      run: usermangage
  template:
    metadata:
      labels:
        run: usermangage
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - image: 192.168.110.72/gene/usermangage:v1.0
          name: usermangage
          resources:
            limits:
              memory: 1Gi
              cpu: 200m
            requests:
              memory: 512Mi
              cpu: 100m
      # qosClass: burstable
